--- a/FireWeb/Content/Site.css
+++ b/FireWeb/Content/Site.css
@@ -104,3 +104,80 @@ form-group{
 box-label{
     
 }
+
+
+
+
+
+
+.modal_wrap input {
+    display: none;
+}
+
+.modal_overlay {
+    display: flex;
+    justify-content: center;
+    overflow: auto;
+    position: fixed;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    transition: opacity 0.5s, transform 0s 0.5s;
+    transform: scale(0);
+}
+
+.modal_trigger {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.modal_content {
+    position: relative;
+    align-self: center;
+    width: 60%;
+    max-width: 800px;
+    padding: 30px 30px 15px;
+    box-sizing: border-box;
+    background: #fff;
+    line-height: 1.4em;
+    transition: 0.5s;
+}
+
+.close_button {
+    position: absolute;
+    top: 14px;
+    right: 16px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.modal_wrap input:checked ~ .modal_overlay {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 0.5s;
+}
+
+.open_button {
+    position: relative;
+    display: block;
+    width: 600px;
+    height: 70px;
+    padding: 0.8em;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background: #EC407A;
+    border: 1px solid #fff;
+    overflow: hidden;
+    margin: 50px 0 50px 0px;
+    cursor:pointer;
+    text-anchor:middle;
+}
+
+.modal_content{
+    height:700px;
+    border-radius:8px;
+}
