--- a/FireWeb/Views/Auction/ItemDetail.cshtml
+++ b/FireWeb/Views/Auction/ItemDetail.cshtml
@@ -1,5 +1,30 @@
 ﻿@model FireWeb.Models.ItemModel
 
+
+<div class="modal_wrap">
+    <input id="trigger" type="checkbox">
+    <div class="modal_overlay">
+        <label for="trigger" class="modal_trigger"></label>
+        <div class="modal_content">
+            <div>
+                <label for="trigger" class="close_button">✖️</label>
+                <h1>入札</h1>
+                <input style="z-index:100000" class="form-control text-box single-line" data-val="true" data-val-number="フィールド DecidePrice には数字を指定してください。" data-val-required="DecidePrice フィールドが必要です。" id="DecidePrice" name="DecidePrice" type="number" value="">
+                <div class="col-md-8 col-md-offset-1">
+                    <div class="form-group">
+                        <label>name</label>
+                        <input type="text" name="email" class="form-control">
+                    </div>
+                    <div class="square_btn">
+                        <button type="submit" value="preview" class="cp_btn" style="font-weight:600"><font size="6" color="#fff">入札</font></button>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="col-md-10 col-md-offset-1" style="background-color:#fff;margin-top:50px;">
         <div class="row" style="height:auto;margin:20px auto 20px auto">
@@ -7,7 +32,7 @@
         </div>
         <div class="row" style="">
             <div class="col-md-7">
-                <div id="carousel-img" class="carousel slide" data-ride="carousel" data-interval="250000">
+                <div id="carousel-img" class="carousel slide" data-ride="carousel" data-interval="250000" style="width:500px;margin-left:20px">
 
                     <!-- 2.表示中のスライドを表すリスト -->
                     <ol class="carousel-indicators">
@@ -18,12 +43,27 @@
 
                     <!-- 3.表示するスライドのコンテンツ -->
                     <div class="carousel-inner" role="listbox">
-                        <div class="item active">
-                            <img src="https://pbs.twimg.com/profile_images/378800000220029324/fe66faeca20115da8566e51d83447ead_400x400.jpeg" style="margin:0;height:500px;width:550px;">
-                        </div>
-                        <div class="item">
-                            <img src="https://pbs.twimg.com/profile_images/3406268893/54b7e1f981b7df7c817af48d1b96ad5e_400x400.jpeg" style="margin:0;height:500px;width:550px;">
-                        </div>
+                        @{
+                            var firstImage = true;
+                            foreach (String i in Model.PicPath)
+                            {
+                                if (firstImage == true)
+                                {
+                                    <div class="item active">
+                                        <img src="..\@i" style="margin:0;height:500px;width:500px;">
+                                    </div>
+                                    firstImage = false;
+                                }
+                                else
+                                {
+                                    <div class="item">
+                                        <img src="..\@i" style="margin:0;height:500px;width:500px;">
+                                    </div>
+                                }
+
+                            }
+                        }
+
                     </div>
                     <!-- 4.左右の矢印ボタン -->
                     <a class="left carousel-control" href="#carousel-img" role="button" data-slide="prev">
@@ -38,31 +78,31 @@
                 <table class="table table-bordered" style="height:300px;font-size:20px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
                     <tr>
                         <th>出品者</th>
-                        <td>@ViewBag.Owner</td>
+                        <td>@Model.Owner</td>
                     </tr>
                     <tr>
                         <th>カテゴリー</th>
-                        <td>@ViewBag.Category</td>
+                        <td>@Model.Category</td>
                     </tr>
                     <tr>
                         <th>状態</th>
-                        <td>@ViewBag.Value</td>
+                        <td>@Model.Value</td>
                     </tr>
                     <tr>
                         <th>開始価格</th>
-                        <td>@ViewBag.StartPrice</td>
+                        <td>@Model.StartPrice</td>
                     </tr>
                     <tr>
                         <th>即決価格</th>
-                        <td>@ViewBag.DecidePrice</td>
+                        <td>@Model.DecidePrice</td>
                     </tr>
                     <tr>
                         <th>開始日時</th>
-                        <td>@ViewBag.StartDate</td>
+                        <td>@Model.StartTime</td>
                     </tr>
                     <tr>
                         <th>終了日時</th>
-                        <td>@ViewBag.EndDate</td>
+                        <td>@Model.EndTime</td>
                     </tr>
                 </table>
                 <table class="table table-bordered" style="height:165px;font-size:20px;font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">
@@ -80,72 +120,76 @@
         <div class="row" style="text-align: center;vertical-align: middle;">
             <div class="now_price" style="text-align: center;vertical-align: middle;margin-top:50px">
                 <span style="text-align: center;vertical-align: middle;font-size:30px;">【現在価格】</span>
-                <span style="text-align: center;vertical-align: middle;font-size:60px;font-weight:600">@ViewBag.NowPrice</span><span style="vertical-align:bottom" ;>(税・送料込み)</span>
+                <span style="text-align: center;vertical-align: middle;font-size:60px;font-weight:600">@Model.NowPrice</span><span style="vertical-align:bottom" ;>(税・送料込み)</span>
             </div>
         </div>
         <div class="row" style="height:auto">
             <div class="col-md-10 col-md-offset-1">
                 <div class="square_btn">
-                    <button type="submit" value="preview" class="cp_btn" style="margin:50px 0 80px 80px"><font size="5" color="#fff">入札</font></button>
+                    <label for="trigger" class="open_button" style="width:600px;margin:50px 0 80px 80px;"><font size="6" color="#fff">入札</font></label>
                 </div>
             </div>
         </div>
-
         <div class="row" style="height:auto">
             <div class="col-md-10 col-md-offset-1" style="margin-bottom:70px">
                 <p style="font-size:20px">
-                    @ViewBag.Detail
+                    @Model.Detail
                 </p>
             </div>
         </div>
     </div>
 </div>
 
-<script>
-    function countdown(y, m, d) {
-        year = y
-        mon = m - 1
-        day = d - 1
-        xday = new Date(year, mon, day, 24, 00, 00);
-        nowday = new Date();
-        passtime = xday.getTime() - nowday.getTime();
-        passtime0 = passtime
 
-        cnt_day = Math.floor(passtime / (1000 * 60 * 60 * 24));
-        passtime = passtime - (cnt_day * (1000 * 60 * 60 * 24));
 
-        cnt_hour = Math.floor(passtime / (1000 * 60 * 60));
-        cnt0_hour = Math.floor(passtime0 / (1000 * 60 * 60));
-        passtime = passtime - (cnt_hour * (1000 * 60 * 60));
 
-        cnt_min = Math.floor(passtime / (1000 * 60));
-        passtime = passtime - (cnt_min * (1000 * 60));
 
-        cnt_sec = Math.floor(passtime / 1000);
-        passtime = passtime - (cnt_sec * (1000));
 
-        if (cnt_min < 10) { cnt_min = '0' + cnt_min; }
-        if (cnt_sec < 10) { cnt_sec = '0' + cnt_sec; }
+@*<script>
+        function countdown(y, m, d, h, m, s) {
+            year = y
+            mon = m - 1
+            day = d
+            xday = new Date(year, mon, day, h, m, s);
+            nowday = new Date();
+            passtime = xday.getTime() - nowday.getTime();
+            passtime0 = passtime
 
-        if ((xday - nowday) >
-            0) {
-            if (cnt_day == 0) {
-                x = cnt0_hour + " : " + cnt_min + " : " + cnt_sec
-            } else {
-                x = cnt_day + " Days "
+            cnt_day = Math.floor(passtime / (1000 * 60 * 60 * 24));
+            passtime = passtime - (cnt_day * (1000 * 60 * 60 * 24));
+
+            cnt_hour = Math.floor(passtime / (1000 * 60 * 60));
+            cnt0_hour = Math.floor(passtime0 / (1000 * 60 * 60));
+            passtime = passtime - (cnt_hour * (1000 * 60 * 60));
+
+            cnt_min = Math.floor(passtime / (1000 * 60));
+            passtime = passtime - (cnt_min * (1000 * 60));
+
+            cnt_sec = Math.floor(passtime / 1000);
+            passtime = passtime - (cnt_sec * (1000));
+
+            if (cnt_min < 10) { cnt_min = '0' + cnt_min; }
+            if (cnt_sec < 10) { cnt_sec = '0' + cnt_sec; }
+
+            if ((xday - nowday) >
+                0) {
+                if (cnt_day == 0) {
+                    x = cnt0_hour + " : " + cnt_min + " : " + cnt_sec
+                } else {
+                    x = cnt_day + " Days "
+                }
             }
+            else {
+                x = "終了致しました。"
+            }
+            return x
         }
-        else {
-            x = "終了致しました。"
+    </script>
+    <script type="text/javascript">
+        window.onload = showCountdown();
+        function showCountdown() {
+            document.tbox1.dspday.value = countdown(@Model.EndTime.Year , @Model.EndTime.Month , @Model.EndTime.Day, @Model.EndTime.Hour ,@Model.EndTime.Minute ,@Model.EndTime.Second);
+            setInterval("showCountdown()", 1000);
         }
-        return x
-    }
-</script>
-<script type="text/javascript">
-    window.onload = showday;
-    function showday() {
-        document.tbox1.dspday.value = countdown(@ViewBag.Year , @ViewBag.Month , @ViewBag.Day );
-        timerID = setTimeout('showday()', 10);
-    }
-</script>
+    </script>*@
 
